--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="../assets/Favicon.png">
+        <link rel="icon" href="./assets/Favicon.png">
         <link rel="stylesheet" href="./css/colors.css">
         <title>Frikerx Geek</title>
     </head>
