--- a/html/main.html
+++ b/html/main.html
@@ -84,7 +84,7 @@
                     </article>
                     <article id="angular" class="post__container">
                         <img src="../assets/spa1.jpg" alt="angular">
-                        <p>Single Page Aplication <small>( Angular )</small></p>
+                        <p>Single Page Application <small>( Angular )</small></p>
                         <p>
                             Development of an application about super heroes in Angular framework, simulating Pinteres.
                         </p>
