--- a/html/main.html
+++ b/html/main.html
@@ -25,11 +25,21 @@
             <!-- Here finish the nav and start the section -->
             <section class="header__icons--container">
                 <div class="icons">
-                    <a href="https://github.com/frakxman" target="_blank" ><img class="img" src="../assets/github1.png" alt="github"></a>
-                    <a href="https://stackoverflow.com/users/13501730/frakxman" target="_blank" ><img class="img" src="../assets/stackoverflow.png" alt="stackoverflow"></a>
-                    <a href="mailto:frakxman@hotmail.com" target="_blank"><img class="img" src="../assets/email.png" alt="email"></a>
-                    <a href="https://platzi.com/@fabian-rivera/" target="_blank" ><img class="img" src="../assets/platzi.png" alt="platzi"></a>
-                    <a href="https://www.linkedin.com/in/fabian-rivera-restrepo-5588a2a7/" target="_blank" ><img class="img" src="../assets/linkedin.png" alt="linkedin"></a>
+                    <a href="https://github.com/frakxman" target="_blank" >
+                        <img class="img" src="../assets/github1.png" alt="github">
+                    </a>
+                    <a href="https://stackoverflow.com/users/13501730/frakxman" target="_blank" >
+                        <img class="img" src="../assets/stackoverflow.png" alt="stackoverflow">
+                    </a>
+                    <a href="mailto:frakxman@hotmail.com" target="_blank">
+                        <img class="img" src="../assets/email.png" alt="email">
+                    </a>
+                    <a href="https://platzi.com/@fabian-rivera/" target="_blank" >
+                        <img class="img" src="../assets/platzi.png" alt="platzi">
+                    </a>
+                    <a href="https://www.linkedin.com/in/fabian-rivera-restrepo-5588a2a7/" target="_blank" >
+                        <img class="img" src="../assets/linkedin.png" alt="linkedin">
+                    </a>
                 </div>
             </section>
             <!-- Here finish the section  -->
@@ -75,7 +85,9 @@
                         <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
                     <article class="post__container">
-                        <img id="js" src="../assets/simono.jpg" alt="game">
+                        <a href="https://frakxman.github.io/Simon-Says/index.html">
+                            <img id="js" src="../assets/simono.jpg" alt="game">
+                        </a>
                         <p>Simon Says <small>( JavaScript )</small></p>
                         <p>
                             This exercise is based on the traditional game of 'Simón Dice', which invites the user to carry the color sequence.
