--- a/html/main.html
+++ b/html/main.html
@@ -34,7 +34,7 @@
                     <a href="mailto:frakxman@hotmail.com" target="_blank">
                         <img class="img" src="../assets/email.png" alt="email">
                     </a>
-                    <a href="https://platzi.com/@fabian-rivera/" target="_blank" >
+                    <a href="https://platzi.com/@fabian-rivera/" target="_blank">
                         <img class="img" src="../assets/platzi.png" alt="platzi">
                     </a>
                     <a href="https://www.linkedin.com/in/fabian-rivera-restrepo-5588a2a7/" target="_blank" >
@@ -85,7 +85,7 @@
                         <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
                     <article class="post__container">
-                        <a href="https://frakxman.github.io/Simon-Says/index.html">
+                        <a href="https://frakxman.github.io/Simon-Says/index.html" target="_blank">
                             <img id="js" src="../assets/simono.jpg" alt="game">
                         </a>
                         <p>Simon Says <small>( JavaScript )</small></p>
