--- a/html/main.html
+++ b/html/main.html
@@ -14,7 +14,7 @@
             <!-- Here start the nav  -->
             <nav>
                 <section class="nav__logo--container">
-                    <a href="index.html"><img class="img1" src="../assets/Logotipo1.png" alt="Logotipo"></a>
+                    <a href="../index.html"><img class="img1" src="../assets/Logotipo1.png" alt="Logotipo"></a>
                 </section>
                 <section class="profile__link">
                     <!-- <a href="main.html">Portfolio</a> -->
@@ -58,9 +58,9 @@
                             Development and implementation of web and mobile applications, in different programming languages, such as:
                         </p>
                         <a href="#Html">Html & Css</a>
-                        <a href="#java">Java</a>
                         <a href="#js">JavaScript</a>
                         <a href="#angular">Angular</a>
+                        <!-- <a href="#java">Java</a> -->
                     </div>
                 </div>
             </section>
@@ -76,11 +76,12 @@
                         <!-- <a class="blogs__button" href="https://frakxman.github.io/personal/html/index.html">See more</a> -->
                     </article>
                     <article class="post__container">
-                        <img id="java"src="../assets/corporal1.jpg" alt="body">
-                        <p>Body Mass Index <small>( Java )</small></p>
+                        <a href="https://platzi-store-8eb75.web.app/home">
+                            <img src="../assets/store.jpg" alt="store">
+                        </a>
+                        <p>Platzi Store <small>( Angular )</small></p>
                         <p>
-                            This applet is developed in Java.
-                            Basically, it allows you to know, according to your height and weight, your body mass index to indicate if it is below or above your ideal weight.
+                            This application simulates an ecommerce with two profiles, one for users and one for administrators.
                         </p>
                         <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
