--- a/html/main.html
+++ b/html/main.html
@@ -86,7 +86,7 @@
                         <!-- <a class="blogs__button" href="SimonSays.html">See more</a> -->
                     </article>
                     <article class="post__container">
-                        <a href="https://platzi-store-8eb75.web.app/home">
+                        <a href="https://platzi-store-8eb75.web.app/home" target="_blank">
                             <img src="../assets/store.jpg" alt="store">
                         </a>
                         <p>Platzi Store <small>( Angular )</small></p>
@@ -95,8 +95,10 @@
                         </p>
                         <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
-                    <article id="angular" class="post__container">
-                        <img src="../assets/spa1.jpg" alt="angular">
+                    <article id="angular" class="post__container" target="_blank">
+                        <a href="https://sipaap-d2a96.web.app/">
+                            <img src="../assets/spa1.jpg" alt="angular">
+                        </a>
                         <p>Single Page Application <small>( Angular )</small></p>
                         <p>
                             Development of an application about super heroes in Angular framework, simulating Pinteres.
