--- a/html/main.html
+++ b/html/main.html
@@ -95,8 +95,8 @@
                         </p>
                         <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
-                    <article id="angular" class="post__container" target="_blank">
-                        <a href="https://sipaap-d2a96.web.app/">
+                    <article id="angular" class="post__container">
+                        <a href="https://sipaap-d2a96.web.app/" target="_blank">
                             <img src="../assets/spa1.jpg" alt="angular">
                         </a>
                         <p>Single Page Application <small>( Angular )</small></p>
