Upload the new project link

--- a/html/main.html
+++ b/html/main.html
@@ -60,20 +60,18 @@
                         <a href="#Html">Html & Css</a>
                         <a href="#js">JavaScript</a>
                         <a href="#angular">Angular</a>
-                        <!-- <a href="#java">Java</a> -->
                     </div>
                 </div>
             </section>
             <section class="blogs__post--container">
                 <div class="grid-container">
                     <h3>Last Projects</h3>
-                    <article id="Html" class="post__container">
+                    <article class="post__container">
                         <img src="../assets/web.jpg" alt="web">
                         <p>Personal Web <small>( Html & Css )</small></p>
                         <p>
                             In this project I have applied my knowledge about HTML and CSS only, in the future we will include the functionality of the page with JavaScript, in addition to migrating it to other technologies
                         </p>
-                        <!-- <a class="blogs__button" href="https://frakxman.github.io/personal/html/index.html">See more</a> -->
                     </article>
                     <article class="post__container">
                         <a href="https://frakxman.github.io/Simon-Says/index.html" target="_blank">
@@ -83,7 +81,6 @@
                         <p>
                             This exercise is based on the traditional game of 'Simón Dice', which invites the user to carry the color sequence.
                         </p>
-                        <!-- <a class="blogs__button" href="SimonSays.html">See more</a> -->
                     </article>
                     <article class="post__container">
                         <a href="https://platzi-store-8eb75.web.app/home" target="_blank">
@@ -92,8 +89,9 @@
                         <p>Platzi Store <small>( Angular )</small></p>
                         <p>
                             This application simulates an ecommerce with two profiles, one for users and one for administrators.
+                            <br/>
+                            The administrator is validated by email, to enter the control panel.
                         </p>
-                        <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
                     <article id="angular" class="post__container">
                         <a href="https://sipaap-d2a96.web.app/" target="_blank">
@@ -103,15 +101,16 @@
                         <p>
                             Development of an application about super heroes in Angular framework, simulating Pinteres.
                         </p>
-                        <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
-                    <article class="post__container">
-                        <img src="../assets/contacts.jpg" alt="contacts">
-                        <p>Contacts <small>( Php )</small></p>
+                    <article id="angular" class="post__container">
+                        <a href="https://moviesapp-7f9f5.web.app/" target="_blank">
+                            <img src="../assets/moviesApp.jpg" alt="angular">
+                        </a>
+                        <p>MoviesApp <small>( Angular )</small></p>
                         <p>
-                            This application was built for practice CRUD( Create, Read, Update and Delete) in PHP
+                            Movies App consumes data from a movie api, with infinite scrolling, search bar, 
+                            on the movie information screen it also shows the casting of the movie in a slider.
                         </p>
-                        <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
                     <article class="post__container">
                         <img src="../assets/spotyApp.png" alt="">
@@ -119,7 +118,6 @@
                         <p>
                             Development of an application that consumes Spotify data in Angular framework.
                         </p>
-                        <!-- <a class="blogs__button" href="">See more</a> -->
                     </article>
                 </div>
             </section>
