Upload new project link

--- a/html/experience.html
+++ b/html/experience.html
@@ -15,7 +15,7 @@
             <!-- Here start the nav  -->
             <nav>
                 <section class="nav__logo--container">
-                    <a href="index.html"><img class="img1" src="../assets/Logotipo1.png" alt="Logotipo"></a>
+                    <a href="main.html"><img class="img1" src="../assets/Logotipo1.png" alt="Logotipo"></a>
                 </section>
                 <section class="profile__link">
                     <a href="main.html">Portfolio</a>
