Upload link moviesApp

--- a/html/main.html
+++ b/html/main.html
@@ -83,7 +83,7 @@
                         </p>
                     </article>
                     <article class="post__container">
-                        <a href="https://platzi-store-8eb75.web.app/home" target="_blank">
+                        <a href="https://platzi-store-8eb75.web.app" target="_blank">
                             <img src="../assets/store.jpg" alt="store">
                         </a>
                         <p>Platzi Store <small>( Angular )</small></p>
