New item framework

--- a/html/main.html
+++ b/html/main.html
@@ -113,10 +113,12 @@
                         </p>
                     </article>
                     <article class="post__container">
-                        <img src="../assets/spotyApp.png" alt="">
-                        <p>SpotyApp <small>( Angular )</small></p>
+                        <a href="https://moviesapp-7f9f5.web.app/" target="_blank">
+                        <img src="../assets/ionic.jpg" alt="">
+                        </a>
+                        <p>To Do List <small>( Ionic )</small></p>
                         <p>
-                            Development of an application that consumes Spotify data in Angular framework.
+                            Application to carry out task lists developed in Ionic.
                         </p>
                     </article>
                 </div>
