Upgrade files and assets

--- a/html/main.html
+++ b/html/main.html
@@ -74,12 +74,21 @@
                         </p>
                     </article>
                     <article class="post__container">
+                        <a href="https://frakxman.github.io/MovilFirst/index.html" target="_blank">
+                            <img id="js" src="../assets/Movilfirst.gif" alt="game">
+                        </a>
+                        <p>Movil First <small>( Html y Css )</small></p>
+                        <p>
+                            It was developed applying the first mobile methodology
+                        </p>
+                    </article>
+                    <article class="post__container">
                         <a href="https://frakxman.github.io/Simon-Says/index.html" target="_blank">
-                            <img id="js" src="../assets/simono.jpg" alt="game">
+                            <img id="html" src="../assets/simono.jpg" alt="game">
                         </a>
                         <p>Simon Says <small>( JavaScript )</small></p>
                         <p>
-                            This exercise is based on the traditional game of 'Simón Dice', which invites the user to carry the color sequence.
+                            This exercise is based on the traditional game of 'Simón Says', which invites the user to carry the color sequence.
                         </p>
                     </article>
                     <article class="post__container">
@@ -110,6 +119,15 @@
                         <p>
                             Movies App consumes data from a movie api, with infinite scrolling, search bar, 
                             on the movie information screen it also shows the casting of the movie in a slider.
+                        </p>
+                    </article>
+                    <article id="angular" class="post__container">
+                        <a href="#" target="_blank">
+                            <img src="../assets/spotyApp.png" alt="angular">
+                        </a>
+                        <p>SpotyApp <small>( Angular )</small></p>
+                        <p>
+                            Spoty App consumes data from a spotify api.
                         </p>
                     </article>
                     <article class="post__container">
