Upgrade file name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main>
             <div class="shadow">
                 <a href="./html/main.html">
-                    <img src="./assets/Logotipo1T.png" alt="logo">
+                    <img src="./assets/LogotipoT.png" alt="logo">
                 </a>
             </div>
         </main>
