Inclusion of a new project

--- a/html/main.html
+++ b/html/main.html
@@ -57,7 +57,7 @@
                         <p>
                             Development and implementation of web and mobile applications, in different programming languages, such as:
                         </p>
-                        <a href="#Html">Html & Css</a>
+                        <a href="#html">Html & Css</a>
                         <a href="#js">JavaScript</a>
                         <a href="#angular">Angular</a>
                     </div>
@@ -66,22 +66,33 @@
             <section class="blogs__post--container">
                 <div class="grid-container">
                     <h3>Last Projects</h3>
-                    <article class="post__container">
+                    <div id="html">
+                        <article class="post__container">
                         <img src="../assets/web.jpg" alt="web">
                         <p>Personal Web <small>( Html & Css )</small></p>
                         <p>
                             In this project I have applied my knowledge about HTML and CSS only, in the future we will include the functionality of the page with JavaScript, in addition to migrating it to other technologies
                         </p>
-                    </article>
-                    <article class="post__container">
+                        </article>
+                        <article class="post__container">
                         <a href="https://frakxman.github.io/MovilFirst/index.html" target="_blank">
-                            <img id="js" src="../assets/Movilfirst.gif" alt="game">
+                            <img src="../assets/Movilfirst.gif" alt="game">
                         </a>
-                        <p>Movil First <small>( Html y Css )</small></p>
+                        <p>Movil First <small>( Html & Css )</small></p>
                         <p>
                             It was developed applying the first mobile methodology
                         </p>
-                    </article>
+                        </article>
+                        <article class="post__container">
+                        <a href="https://frakxman.github.io/Bootstrap/" target="_blank">
+                            <img src="../assets/bootstrap.png" alt="game">
+                        </a>
+                        <p>Landing page <small>( Bootstrap )</small></p>
+                        <p>
+                            This landing page was developed with Bootstrap framework, applying many of its functionalities such as modal and responsive design
+                        </p>
+                        </article>
+                    </div>
                     <article class="post__container">
                         <a href="https://frakxman.github.io/Simon-Says/index.html" target="_blank">
                             <img id="html" src="../assets/simono.jpg" alt="game">
