--- a/html/main.html
+++ b/html/main.html
@@ -58,7 +58,10 @@
                             Development and implementation of web and mobile applications, in different programming languages, such as:
                         </p>
                         <a href="#html">Html & Css</a>
-                        <a href="#js">JavaScript</a>
+                        <a href="#js">
+                            JavaScript
+                        </a>
+                        
                         <a href="#angular">Angular</a>
                     </div>
                 </div>
@@ -68,79 +71,83 @@
                     <h3>Last Projects</h3>
                     <div id="html">
                         <article class="post__container">
-                        <img src="../assets/web.jpg" alt="web">
-                        <p>Personal Web <small>( Html & Css )</small></p>
-                        <p>
-                            In this project I have applied my knowledge about HTML and CSS only, in the future we will include the functionality of the page with JavaScript, in addition to migrating it to other technologies
-                        </p>
+                            <a href="https://frakxman.github.io/Materialize/" target="_blank">
+                                <img src="../assets/materialize.jpg" alt="web">
+                            </a>
+                            <p>Blog of blogs<small> ( Materialize )</small></p>
+                            <p>
+                                This blog was developed in the Materialize framework
+                            </p>
                         </article>
                         <article class="post__container">
-                        <a href="https://frakxman.github.io/MovilFirst/index.html" target="_blank">
-                            <img src="../assets/Movilfirst.gif" alt="game">
-                        </a>
-                        <p>Movil First <small>( Html & Css )</small></p>
-                        <p>
-                            It was developed applying the first mobile methodology
-                        </p>
+                            <a href="https://frakxman.github.io/MovilFirst/index.html" target="_blank">
+                                <img src="../assets/Movilfirst.gif" alt="game">
+                            </a>
+                            <p>Movil First <small>( Html & Css )</small></p>
+                            <p>
+                                It was developed applying the first mobile methodology
+                            </p>
                         </article>
                         <article class="post__container">
-                        <a href="https://frakxman.github.io/Bootstrap/" target="_blank">
-                            <img src="../assets/bootstrap.png" alt="game">
-                        </a>
-                        <p>Landing page <small>( Bootstrap )</small></p>
-                        <p>
-                            This landing page was developed with Bootstrap framework, applying many of its functionalities such as modal and responsive design
-                        </p>
+                            <a href="https://frakxman.github.io/Bootstrap/" target="_blank">
+                                <img src="../assets/bootstrap.png" alt="game">
+                            </a>
+                            <p>Landing page <small>( Bootstrap )</small></p>
+                            <p>
+                                This landing page was developed with Bootstrap framework, applying many of its functionalities such as modal and responsive design
+                            </p>
                         </article>
                     </div>
-                    <article class="post__container">
-                        <a href="https://frakxman.github.io/Simon-Says/index.html" target="_blank">
-                            <img id="html" src="../assets/simono.jpg" alt="game">
-                        </a>
-                        <p>Simon Says <small>( JavaScript )</small></p>
-                        <p>
-                            This exercise is based on the traditional game of 'Simón Says', which invites the user to carry the color sequence.
-                        </p>
-                    </article>
-                    <article class="post__container">
-                        <a href="https://platzi-store-8eb75.web.app" target="_blank">
-                            <img src="../assets/store.jpg" alt="store">
-                        </a>
-                        <p>Platzi Store <small>( Angular )</small></p>
-                        <p>
-                            This application simulates an ecommerce with two profiles, one for users and one for administrators.
-                            <br/>
-                            The administrator is validated by email, to enter the control panel.
-                        </p>
-                    </article>
-                    <article id="angular" class="post__container">
-                        <a href="https://sipaap-d2a96.web.app/" target="_blank">
-                            <img src="../assets/spa1.jpg" alt="angular">
-                        </a>
-                        <p>Single Page Application <small>( Angular )</small></p>
-                        <p>
-                            Development of an application about super heroes in Angular framework, simulating Pinteres.
-                        </p>
-                    </article>
-                    <article id="angular" class="post__container">
-                        <a href="https://moviesapp-7f9f5.web.app/" target="_blank">
-                            <img src="../assets/moviesApp.jpg" alt="angular">
-                        </a>
-                        <p>MoviesApp <small>( Angular )</small></p>
-                        <p>
-                            Movies App consumes data from a movie api, with infinite scrolling, search bar, 
-                            on the movie information screen it also shows the casting of the movie in a slider.
-                        </p>
-                    </article>
-                    <article id="angular" class="post__container">
-                        <a href="#" target="_blank">
-                            <img src="../assets/spotyApp.png" alt="angular">
-                        </a>
-                        <p>SpotyApp <small>( Angular )</small></p>
-                        <p>
-                            Spoty App consumes data from a spotify api.
-                        </p>
-                    </article>
+                    <div id="js">
+                        <article class="post__container">
+                            <a href="https://frakxman.github.io/Simon-Says/index.html" target="_blank">
+                                <img id="html" src="../assets/simono.jpg" alt="game">
+                            </a>
+                            <p>Simon Says <small>( JavaScript )</small></p>
+                            <p>
+                                This exercise is based on the traditional game of 'Simón Says', which invites the user to carry the color sequence.
+                            </p>
+                        </article>
+                        <article class="post__container">
+                            <a href="https://platzi-store-8eb75.web.app" target="_blank">
+                                <img src="../assets/store.jpg" alt="store">
+                            </a>
+                            <p>Platzi Store <small>( Angular )</small></p>
+                            <p>
+                                This application simulates an ecommerce with two profiles, one for users and one for administrators.
+                                <br/>
+                                The administrator is validated by email, to enter the control panel.
+                            </p>
+                        </article>
+                        <article id="angular" class="post__container">
+                            <a href="https://sipaap-d2a96.web.app/" target="_blank">
+                                <img src="../assets/spa1.jpg" alt="angular">
+                            </a>
+                            <p>Single Page Application <small>( Angular )</small></p>
+                            <p>
+                                Development of an application about super heroes in Angular framework, simulating Pinteres.
+                            </p>
+                        </article>
+                        <article id="angular" class="post__container">
+                            <a href="https://moviesapp-7f9f5.web.app/" target="_blank">
+                                <img src="../assets/moviesApp.jpg" alt="angular">
+                            </a>
+                            <p>MoviesApp <small>( Angular )</small></p>
+                            <p>
+                                Movies App consumes data from a movie api, with infinite scrolling, search bar, 
+                                on the movie information screen it also shows the casting of the movie in a slider.
+                            </p>
+                        </article>
+                        <article id="angular" class="post__container">
+                            <a href="#" target="_blank">
+                                <img src="../assets/spotyApp.png" alt="angular">
+                            </a>
+                            <p>SpotyApp <small>( Angular )</small></p>
+                            <p>
+                                Spoty App consumes data from a spotify api.
+                            </p>
+                        </article>
+                    </div>
                     <article class="post__container">
                         <img src="../assets/ionic.jpg" alt="">
                         <p>To Do List <small>( Ionic )</small></p>
