--- a/html/main.html
+++ b/html/main.html
@@ -69,7 +69,8 @@
             <section class="blogs__post--container">
                 <div class="grid-container">
                     <h3>Last Projects</h3>
-                    <div id="html">
+                    <div id="html" class="html">
+                        <h1>Frameworks Frontend</h1>
                         <article class="post__container">
                             <a href="https://frakxman.github.io/Materialize/" target="_blank">
                                 <img src="../assets/materialize.jpg" alt="web">
@@ -98,18 +99,28 @@
                             </p>
                         </article>
                     </div>
-                    <div id="js">
+                    <div id="js" class="js">
+                        <h1>JavaScript ( Vanilla, Angular, Vue, React, Svelte )</h1>
                         <article class="post__container">
                             <a href="https://frakxman.github.io/Simon-Says/index.html" target="_blank">
                                 <img id="html" src="../assets/simono.jpg" alt="game">
                             </a>
-                            <p>Simon Says <small>( JavaScript )</small></p>
+                            <p>Simon Says <small>( JavaScript Vanilla )</small></p>
                             <p>
                                 This exercise is based on the traditional game of 'Simón Says', which invites the user to carry the color sequence.
                             </p>
                         </article>
                         <article class="post__container">
-                            <a href="https://platzi-store-8eb75.web.app" target="_blank">
+                            <a href="https://frakxman.github.io/SPA/" target="_blank">
+                                <img id="html" src="../assets/spajs.jpg" alt="game">
+                            </a>
+                            <p>SPA<small> ( JavaScript Vanilla )</small></p>
+                            <p>
+                                Single page application that consumes data from the Rick and Morty API, developed with Vanilla JavaScript
+                            </p>
+                        </article>
+                        <article class="post__container">
+                            <a href="https://store-a4b56.web.app/home" target="_blank">
                                 <img src="../assets/store.jpg" alt="store">
                             </a>
                             <p>Platzi Store <small>( Angular )</small></p>
