--- a/html/main.html
+++ b/html/main.html
@@ -58,11 +58,8 @@
                             Development and implementation of web and mobile applications, in different programming languages, such as:
                         </p>
                         <a href="#html">Html & Css</a>
-                        <a href="#js">
-                            JavaScript
-                        </a>
-                        
-                        <a href="#angular">Angular</a>
+                        <a href="#js">JavaScript</a>
+                        <a href="#ionic">Ionic</a>
                     </div>
                 </div>
             </section>
@@ -77,7 +74,7 @@
                             </a>
                             <p>Blog of blogs<small> ( Materialize )</small></p>
                             <p>
-                                This blog was developed in the Materialize framework
+                                This blog was developed in the Materialize framework for Frontend 
                             </p>
                         </article>
                         <article class="post__container">
@@ -95,7 +92,7 @@
                             </a>
                             <p>Landing page <small>( Bootstrap )</small></p>
                             <p>
-                                This landing page was developed with Bootstrap framework, applying many of its functionalities such as modal and responsive design
+                                This landing page was developed with Bootstrap framework
                             </p>
                         </article>
                     </div>
@@ -126,8 +123,6 @@
                             <p>Platzi Store <small>( Angular )</small></p>
                             <p>
                                 This application simulates an ecommerce with two profiles, one for users and one for administrators.
-                                <br/>
-                                The administrator is validated by email, to enter the control panel.
                             </p>
                         </article>
                         <article id="angular" class="post__container">
@@ -146,7 +141,7 @@
                             <p>MoviesApp <small>( Angular )</small></p>
                             <p>
                                 Movies App consumes data from a movie api, with infinite scrolling, search bar, 
-                                on the movie information screen it also shows the casting of the movie in a slider.
+                                on the movie information screen it also...
                             </p>
                         </article>
                         <article id="angular" class="post__container">
@@ -159,13 +154,16 @@
                             </p>
                         </article>
                     </div>
-                    <article class="post__container">
-                        <img src="../assets/ionic.jpg" alt="">
-                        <p>To Do List <small>( Ionic )</small></p>
-                        <p>
-                            Application to carry out task lists developed in Ionic.
-                        </p>
-                    </article>
+                    <div id="ionic" class="ionic">
+                        <h1>Ionic</h1>
+                        <article class="post__container">
+                            <img src="../assets/ionic.jpg" alt="">
+                            <p>To Do List <small>( Ionic )</small></p>
+                            <p>
+                                Application to carry out task lists developed in Ionic.
+                            </p>
+                        </article>
+                    </div>
                 </div>
             </section>
         </main>
