Upload the link

--- a/html/main.html
+++ b/html/main.html
@@ -120,9 +120,9 @@
                             <a href="https://store-a4b56.web.app/home" target="_blank">
                                 <img src="../assets/store.jpg" alt="store">
                             </a>
-                            <p>Platzi Store <small>( Angular )</small></p>
+                            <p>Angular Store <small>( Angular )</small></p>
                             <p>
-                                This application simulates an ecommerce with two profiles, one for users and one for administrators.
+                                This PWA simulates an ecommerce with two profiles, one for users and one for administrators.
                             </p>
                         </article>
                         <article id="angular" class="post__container">
@@ -145,12 +145,12 @@
                             </p>
                         </article>
                         <article id="angular" class="post__container">
-                            <a href="#" target="_blank">
+                            <a href="https://sapperapp.herokuapp.com/" target="_blank">
                                 <img src="../assets/spotyApp.png" alt="angular">
                             </a>
-                            <p>SpotyApp <small>( Angular )</small></p>
+                            <p>Pugstagram <small>( Sapper y Svelte )</small></p>
                             <p>
-                                Spoty App consumes data from a spotify api.
+                                This app simulates an instagram aplication and was developed with frameworks Sapper and Svelte.
                             </p>
                         </article>
                     </div>
