--- a/html/main.html
+++ b/html/main.html
@@ -117,7 +117,7 @@
                             </p>
                         </article>
                         <article class="post__container">
-                            <a href="https://storefr-f825d.web.app" target="_blank">
+                            <a href="https://angularstore-792b3.web.app" target="_blank">
                                 <img src="../assets/store.jpg" alt="store">
                             </a>
                             <p>Angular Store <small>( Angular )</small></p>
